styles.css
/* undo default link styling */
a {
    color: inherit;
    text-decoration: none;
}

/* remove default link highlight on mobile */
* {
    -webkit-tap-highlight-color: transparent;
}

/* prevent images being too big for small screens */
img {
    max-width: 100%;
    height: auto;
}

/* setup font */
html {
    font-family: 'Raleway', sans-serif;
}

h1 h2 {
    font-weight: bold;
}

footer {
    font-weight: 200;
}

/* HEADER */

/* center the logo & navbar in the header */
header {
    background-color: #3D396C;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

/* center the navbar links in a row */
.nav-bar {
    display: flex;
    flex-flow: row;
    align-items: center;
    justify-content: center;
    text-wrap: nowrap;
}

/* customise padding for the links */
.nav-bar-link {
    margin-left: 50px;
    margin-right: 50px;
}

.nav-bar-link-label {
    margin-top: 0;
}

/* add colours to links & change colour on hover */
.nav-bar-link-label {
    color: white;
    transition: color 0.5s;
}

.nav-bar-link-label:hover {
    color: gray;
}

/* mobile nav modal */

.mobile-nav-open {
    display: none;
    color: white;
    padding: 10px;
    margin-bottom: 20px;
    cursor: pointer;
}

@media all and (max-width: 700px) {
    .nav-bar {
        display: none;
    }

    .mobile-nav-open {
        display: inline;
    }
}

.mobile-nav-modal {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: white;
}

/* class to block scrolling while modal is open */

.no-scroll {
    margin: 0;
    height: 100%;
    overflow: hidden;
}

.mobile-nav-close {
    position: relative;
    color: black;
    cursor: pointer;
    padding-bottom: 50px;
    z-index: 1;
    top: -30px;
    margin-bottom: -51px;
}

.mobile-nav {
    display: none;
    opacity: 0;
}

.mobile-nav-active {
    display: block;
    opacity: 1;
    animation: opening-mobile-nav 0.5s ease-out;
}

@keyframes opening-mobile-nav {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.mobile-nav-closing {
    animation: closing-mobile-nav 0.5s ease-out;
    opacity: 0;
}

@keyframes closing-mobile-nav {
    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

.mobile-nav-bar {
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: center;
    text-wrap: nowrap;
    height: 100%;
    gap: 10px;
}

.mobile-nav-bar-link-label {
    color: black;
    transition: color 0.5s;
}

.mobile-nav-bar-link-label:hover {
    color: lightgray;
}

/* MAIN */

/* classes to show & hide page sections */
.page {
    display: none;
}

.active {
    display: block;
    width: 100%;
}

/* center pages */
main {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

/* home page */

#home {
    text-align: center;
}

#home-coverart {
    transition: 0.2s;
}

#home-coverart:hover {
    transform: scale(1.03);
}

@media all and (max-width: 700px) {
    #home {
        font-size: small;
    }

    #home-coverart {
        object-fit: contain;
        width: 80%;
        height: auto;
    }
}

/* music page */

#music {
    /* allows for two columns of images with some padding */
    max-width: 700px;
    margin-top: 40px;
    margin-bottom: 40px;
}

@media all and (max-width: 700px) {

    /* allows for one column of images with some padding */
    #music {
        max-width: 400px;
    }
}

#gallery {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 40px 40px;
}

#gallery>a {
    display: flex;
    align-items: center;
    justify-content: center;
}

.coverart {
    max-width: 80%;
    transition: 0.2s;
}

.coverart:hover {
    transform: scale(1.1);
}

/* sign-up page */

#mailing-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#mailing-list>form {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    width: 80%;
    gap: 5px;
}

#mailing-list>form>input {
    padding: 20px;
    border: 0.25rem solid black;
    border-radius: 5px;
    font-style: italic;
    background-color: white;
}

#mailing-list>form>.text-input {
    width: 80%;
    max-width: 600px;
}

#mailing-list>form>.text-input::placeholder {
    color: black;
    /* Firefox */
    opacity: 1;
}

#mailing-list>form>.text-input::-ms-input-placeholder {
    /* Edge 12 -18 */
    color: black;
}

#privacy {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-self: center;
    gap: 10px;
    font-style: italic;

    /* replicate silly extra bottom padding on inputs */
    margin-bottom: 30px;
}

#privacy-checkbox {
    accent-color: black;
    height: 30px;
    width: 30px;
}

#submit {
    /* override italic default for the form */
    font-style: normal !important;
    font-weight: 600;
    transition: color 0.7s;
    max-width: 80%;
}

/* flip colours on hover */
#submit:hover {
    color: white;
    background-color: black;
}

/* change back to normal as you click */
#submit:focus {
    color: black;
    background-color: white;
}

/* FOOTER */

/* make the footer 'sticky' */
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex-grow: 1;
}

/* styling */
footer {
    display: flex;
    flex-flow: row wrap;
    align-items: center;

    justify-content: space-evenly;
    align-content: space-between;
    gap: 10px;

    margin: 15px 50px 15px 50px;
}

#contact-email, #copyright {
    display: block;
    text-align: center;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

/* center the external links */
.external-links {
    display: flex;
    justify-content: center;
    align-content: center;
}

.external-links {
    display: flex;
    flex-flow: row wrap;
    align-items: center;

    justify-content: space-evenly;
    align-content: space-between;
    gap: 10px;

    flex-grow: 2;
    max-width: 30vw;
}

.external-link:hover {
    color: grey;
}

.external-link:focus {
    color: grey;
}

/* mobile: move external links to the top & allow them to grow to full width */
@media all and (max-width: 700px) {
    footer>* {
        flex: 1 100%;
    }

    .external-links {
        order: -1;
        max-width: 100vw;
    }
}

